detect_motion preliminarily works

--- a/distance_playground.ipynb
+++ b/distance_playground.ipynb
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
@@ -363,6 +363,310 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17, 2, 3600)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "practice.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dists, nans = get_distances(right_wrist, .1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3600)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "right_wrist.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(0, array([8]), 78.50168852591123),\n",
+       " (10, 39, 302.53963470510496),\n",
+       " (40, 121, 1791.241092680269)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_nan_clusters(nans)\n",
+    "get_part_motion(dists, nans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[9]]),\n",
+       " array([[39]]),\n",
+       " array([[ 121],\n",
+       "        [ 122],\n",
+       "        [ 123],\n",
+       "        ...,\n",
+       "        [3595],\n",
+       "        [3596],\n",
+       "        [3597]])]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.split(nans, np.where(np.diff(np.reshape(nans, nans.shape[0])) != 1)[0]+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3481, 1)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nans.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   9,   39,   72, ..., 3595, 3596, 3597])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.reshape(nans, 3481)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3598,)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dists.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from backend.detect_movement import *\n",
+    "practice = np.load('rightArmWave.npy')\n",
+    "right_wrist = practice[10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3600)\n",
+      "20\n",
+      "(2, 3600)\n",
+      "39\n",
+      "(2, 3600)\n",
+      "39\n",
+      "(2, 3600)\n",
+      "1\n",
+      "(2, 3600)\n",
+      "38\n",
+      "(2, 3600)\n",
+      "18\n",
+      "(2, 3600)\n",
+      "7\n",
+      "(2, 3600)\n",
+      "15\n",
+      "(2, 3600)\n",
+      "39\n",
+      "(2, 3600)\n",
+      "39\n",
+      "(2, 3600)\n",
+      "9\n",
+      "(2, 3600)\n",
+      "39\n",
+      "(2, 3600)\n",
+      "39\n",
+      "(2, 3600)\n",
+      "39\n",
+      "(2, 3600)\n",
+      "39\n",
+      "(2, 3600)\n",
+      "39\n",
+      "(2, 3600)\n",
+      "39\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'nose': [(0, 19, 34.158574103346766),\n",
+       "  (21, 39, 18.200536276705783),\n",
+       "  (40, 44, 1.4977051640568932),\n",
+       "  (45, 98, 101.30708870148126),\n",
+       "  (99, 104, 2.957756562131295),\n",
+       "  (105, 121, 193.55832065759995)],\n",
+       " 'leftEye': [(0, 38, 45.72517021268008),\n",
+       "  (40, 44, 2.6181171709421798),\n",
+       "  (45, 110, 125.36334791059538),\n",
+       "  (111, 121, 193.3137802509996)],\n",
+       " 'rightEye': [(0, 38, 48.120254267284004),\n",
+       "  (40, 46, 2.5838363304825736),\n",
+       "  (47, 98, 88.94773028852353),\n",
+       "  (99, 121, 181.61773438564046)],\n",
+       " 'leftEar': [(0, 0, 0.8373052568848806),\n",
+       "  (2, 22, 24.527708695679188),\n",
+       "  (23, 39, 63.63556134680885),\n",
+       "  (40, 106, 231.62530624414438),\n",
+       "  (107, 112, 4.628228392898887),\n",
+       "  (113, 115, 0.6595951255409207),\n",
+       "  (116, 121, 197.1473103007062)],\n",
+       " 'rightEar': [(0, 37, 42.14539824298922),\n",
+       "  (40, 70, 58.03051594159347),\n",
+       "  (71, 76, 4.962311820294123),\n",
+       "  (77, 78, 1.8902055520466565),\n",
+       "  (79, 121, 233.3747146504263)],\n",
+       " 'leftShoulder': [(0, 17, 15.713762666475496),\n",
+       "  (19, 39, 19.71700121048752),\n",
+       "  (40, 121, 400.8380278854412)],\n",
+       " 'rightShoulder': [(0, 6, 6.246976183016651),\n",
+       "  (8, 39, 28.177051481041655),\n",
+       "  (40, 121, 328.54861959407174)],\n",
+       " 'leftElbow': [(0, 14, 22.07536191895052),\n",
+       "  (16, 39, 27.066464469020122),\n",
+       "  (40, 121, 669.8043016263317)],\n",
+       " 'rightElbow': [(0, 38, 84.67333792709263), (40, 121, 592.3252694661677)],\n",
+       " 'leftWrist': [(0, 38, 769.7522899310452), (40, 121, 2893.566710498747)],\n",
+       " 'rightWrist': [(0, 8, 78.50168852591123),\n",
+       "  (10, 39, 302.53963470510496),\n",
+       "  (40, 121, 1791.241092680269)],\n",
+       " 'leftHip': [(0, 38, 41.31316468654503), (40, 121, 487.17349671812445)],\n",
+       " 'rightHip': [(0, 38, 137.40821769695725), (40, 121, 611.7102228285638)],\n",
+       " 'leftKnee': [(0, 38, 127.83332102401256), (40, 121, 608.5958336921981)],\n",
+       " 'rightKnee': [(0, 38, 110.43199452091822), (40, 121, 826.8193147898563)],\n",
+       " 'leftAnkle': [(0, 38, 76.84466419213265), (40, 121, 1099.772112406256)],\n",
+       " 'rightAnkle': [(0, 38, 86.07683608680658), (40, 121, 900.5815270341734)]}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "detect_motions(practice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17, 2, 3600)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "practice.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -385,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
